--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ncc build index.ts -o dist"
   },
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.485.0",
     "octokit": "^3.1.2"
   },
   "devDependencies": {
