--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "env-protection",
   "version": "0.0.0",
   "description": "Environment protection webhook.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Mike Dalrymple",
+  "scripts": {
+    "build": "ncc build index.ts -o dist"
+  },
   "dependencies": {
-    "octokit": "^3.1.1"
+    "@aws-sdk/client-sns": "^3.485.0",
+    "@aws-sdk/client-ssm": "^3.485.0",
+    "octokit": "^3.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.6",
+    "@vercel/ncc": "^0.38.1",
+    "esbuild": "^0.19.11",
+    "typescript": "^5.3.3"
   }
 }
