Revert "Auxiliary commit to revert individual files from 30c55bab52a0118e0c17ecf860a9f4565ba12cd3"
This reverts commit 8b86d30dc8b0e681eb338ace5f441461f792b8ea.

--- a/.github/workflows/matrix-region-az.yml
+++ b/.github/workflows/matrix-region-az.yml
@@ -27,7 +27,8 @@ jobs:
     uses: ./.github/workflows/matrix-target.yml
     with:
       runner: 'ubuntu-22.04'
-      environment: PROD ${{ matrix.target.region }} ${{ matrix.target.az }}
+#      environment: PROD ${{ matrix.target.region }} ${{ matrix.target.az }}
+      environment: env-0
       region: ${{ matrix.target.region }}
       az: ${{ matrix.target.az }}
 
